Release CMTK-1.3.0:

- API: refactored multi-channel registration class hierarchy to factor common
    code out of template class and into new non-template base class
    cmtk::MultiChannelRegistrationFunctionalBase 
- Added: mat2dof tool can now read from file in addition to reading from
    std::cin via redirection.
- API: introduced "cmtk::Units" namespace with classes that handle conversions
    between units, e.g., between degrees and radians. Also added unit-safe
    trigonometric functions to MathUtil class.
- Refactored: numerous code improvements based on suggestions from the third
    edition of Meyers, S., "Effective C++"
- Removed: obsolete real-valued mod operators in MathUtil namespace.
- Removed: long unused support for GIPL image file format import
- Fix: volume_reconstruction and volume_injection tools now convert affine ITK
    transformations (i.e., such read from .tfm files) from native into
    standard space (Issue #4761).
- API: made all meta key strings C++ objects rather than cpp #defines; also
    removed CMTK_ prefix after moving them into cmtk namespace.
- API: renamed "InformationObject" class to more descriptive
    "MetaInformationObject"
- Fixed: various issues pointed out by "cppcheck" static code analysis.
- API: moved morphological operators from cmtk::DataGrid into separate class,
    cmtk::DataGridMorphologicalOperators.
- API: prevent copying of system classes where this would lead to problems.
- Added: filter, levelset, make_initial_affine, mrbias, and reformatx tools
    now support database updating.
- Added: database backend for storing images and transformations between their
    coordinate spaces.
- Added: "convertx --binarize-thresh" operation
- Bugfix: shared-library build configuration was broken.
- Bugfix: "convertx --mask-inverse" was broken.
- Added: "mk_phantom_3d" tool can now import either an image including
    existing pixel data or just the grid geometry.