@@ -97,6 +97,14 @@ protected:
   virtual void EnterResolution( CoordinateVector::SmartPtr&, Functional::SmartPtr&, const int, const int );
 
 private:
+  /** Path of the actual input transformation, if any.
+   * If two input transformations are specified, i.e., one as the input studylist and one via
+   * the "--initial" command line switch, then this variable holds the path of the transformation
+   * that was actually used (the one specified with "--initial"). This is used when the optional
+   * image/transformation database is updated.
+   */
+  const char* m_InitialXformPath;
+
   /// Number of levels for automatic parameter generation.
   unsigned int m_AutoMultiLevels;
 
@@ -131,6 +139,11 @@ private:
    */
   const char *Study2;
 
+#ifdef CMTK_USE_SQLITE
+  /// Database to update after registration completes.
+  const char* m_UpdateDB;
+#endif
+
   /** Name of protocol output file.
    * This is defined by the -p or --protocol command line option.
    */
@@ -160,6 +173,7 @@ private:
 
   /// Output result (and statistics) as studylist archive.
   void OutputResultList( const char* studyList ) const;
+
 };
 
 //@}
